Stop page from "jumping" 2px when CC image link hovered
Counteracts the `a:hover ... { ... margin-bottom: -2px; }` earlier in
the stylesheet

--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,7 @@ footer {
 
 .project-foot a, .project-foot a:hover {
   border: 0;
+  margin-bottom: 0;
 }
 
 [rel="license"] {
